<resources>
    <string name="app_name">Terrarium</string>
    <string name="percent">%</string>
    <string name="degrees">\u2103</string>
    <string name="seconds">seconden</string>
    <string name="minutes">minuten</string>

    <string name="mitConfig">Instellingen</string>
    <string name="pref_ip_address">Terrarium IP-adres</string>

    <string name="mitState">Toestand apparaten</string>
    <string name="mitHelp">Help</string>
    <string name="titleStateFragment">Huidge status van de apparaten</string>
    <string name="lblLight1">Lamp 1</string>
    <string name="lblLight2">Lamp 2</string>
    <string name="lblLight3">Lamp 3</string>
    <string name="lblLight4">Lamp 4</string>
    <string name="lblLight5">Lamp 5</string>
    <string name="lblLight6">Lamp 6</string>
    <string name="lblPump">Achterwand bevloei\u00EFng</string>
    <string name="lblSprayer">Sproeier</string>
    <string name="lblMist">Vernevelaar</string>
    <string name="lblFanIn">Ventilator In</string>
    <string name="lblFanOut">Ventilator Uit</string>
    <string name="on">aan</string>
    <string name="off">uit</string>
    <string name="st_btnRefresh">Vernieuwen</string>
    <string name="st_tvwClock">Klok:</string>
    <string name="dlg_tvwClockTitle">Stel de datum en tijd handmatig in</string>
    <string name="dlg_tvwClock1">Geef datum als volgt op: dd/mm/yyyy hh:mm</string>
    <string name="dlg_tvwClock2">Bv. 02/04/2020 14:25 voor 2 April 2020</string>
    <string name="st_btnManual">Stel in</string>
    <string name="st_tvwTerrarium">Terrarium:</string>
    <string name="st_tvwRoom">Kamer:</string>
    <string name="edtOnPeriod"></string>
    <string name="st_tvwRules">Programma:</string>

    <string name="mitTimers">Tijdklokken</string>
    <string name="titleTimerFragment">Tijdklok instellingen </string>
    <string name="lblOnPeriod">Hoe lang moet het apparaat aan staan?</string>
    <string name="lblOnPeriod2">Geef waarde op in seconden, max 3600.</string>
    <string name="lblOnPeriod3">Geen waarde is geen eindtijd.</string>
    <string name="dltOnPeriod">Aan periode</string>
    <string name="dlt_btnSave">Ok</string>
    <string name="dlt_btnCancel">Annuleer</string>
    <string name="ti_btnSave">Opslaan</string>
    <string name="ti_btnRefresh">Vernieuwen</string>
    <string name="it_tvwEvery">elke</string>
    <string name="it_tvwDay">dag(en)</string>
    <string name="it_tvwFor">gedurende</string>

    <string name="mitProgram">Regelingen</string>
    <string name="lblDayprogram">Dag regeling</string>
    <string name="lblNightprogram">Nacht regeling</string>
    <string name="lblDrying">Droog maken</string>
    <string name="titleProgramFragment">Vochtigheid en temperatuur regeling</string>
    <string name="pg_tvwDryingPeriodsTitle">Droog blazen</string>
    <string name="pg_tvwStartAfter">Zet beide Ventilatoren aan</string>
    <string name="pg_tvwAfter">minuten nadat Sproeier uit is</string>
    <string name="pg_tvwPeriod1">en laat ze</string>
    <string name="pg_tvwPeriod2">draaien</string>
    <string name="pg_btnRefresh">Vernieuwen</string>
    <string name="pg_btnSave">Opslaan</string>
    <string name="pg_lblActive">Aktief</string>
    <string name="pg_lblAt">om</string>
    <string name="pg_lblIdeal">Gewenste</string>
    <string name="pg_lblTemp">temperatuur</string>
    <string name="pg_lblHum">vochtigheid</string>
    <string name="pg_lblHumRules">Vochtigheid regels</string>
    <string name="pg_lblHumRuleText1">Als de vochtigheid</string>
    <string name="pg_lblHumRuleText2a">boven</string>
    <string name="pg_lblHumRuleText2b">onder</string>
    <string name="pg_lblHumRuleText3">komt dan</string>
    <string name="pg_lblTempRules">Temperatuur regels</string>
    <string name="pg_lblTempRuleText1">Als de temperatuur</string>
    <string name="pg_lblTempRuleText2a">boven</string>
    <string name="pg_lblTempRuleText2b">onder</string>
    <string name="pg_lblTempRuleText3">komt dan</string>
    <string name="pg_lblActionText1">zet</string>
    <string name="pg_lblActionText2">aan</string>
    <string name="pg_lblActionText3a">voor</string>
    <string name="pg_lblActionText3b">totdat de gewenste waarde bereikt is</string>
    <string name="pg_lblActionText4">en</string>
</resources>