<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/timersHeader"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:background="@color/colorAccent">

        <TextView
            android:id="@+id/textViewTitleTimers"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/titleTimerFragment"
            android:textSize="24sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <View
            android:id="@+id/dividerTimers"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="?android:attr/listDivider"
            app:layout_constraintBottom_toBottomOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <LinearLayout
        android:id="@+id/timersBody"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">

        <LinearLayout
            android:id="@+id/deviceButtons"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <Button
                android:id="@+id/dev_btnLight1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/notActive"
                android:text="@string/lblLight1" />

            <Button
                android:id="@+id/dev_btnLight2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/notActive"
                android:text="@string/lblLight2" />

            <Button
                android:id="@+id/dev_btnLight3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/notActive"
                android:text="@string/lblLight3" />

            <Button
                android:id="@+id/dev_btnLight4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/notActive"
                android:text="@string/lblLight4" />

            <Button
                android:id="@+id/dev_btnLight5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/notActive"
                android:text="@string/lblLight5" />

            <Button
                android:id="@+id/dev_btnLight6"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/notActive"
                android:text="@string/lblLight6" />

            <Button
                android:id="@+id/dev_btnPump"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/notActive"
                android:text="@string/lblPump" />

            <Button
                android:id="@+id/dev_btnSprayer"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/notActive"
                android:text="@string/lblSprayer" />

            <Button
                android:id="@+id/dev_btnMist"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/notActive"
                android:text="@string/lblMist" />

            <Button
                android:id="@+id/dev_btnFanIn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/notActive"
                android:text="@string/lblFanIn" />

            <Button
                android:id="@+id/dev_btnFanOut"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/notActive"
                android:text="@string/lblFanOut" />
        </LinearLayout>

        <FrameLayout
            android:id="@+id/list_frame"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />

    </LinearLayout>

</LinearLayout>