<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <variable name="timerItem" type="nl.das.terrarium.data.TimersItem" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/relativeLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/it_tvwTimer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="32dp"
            android:layout_marginBottom="32dp"
            android:text="Timer 1"
            android:textSize="18sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="HardcodedText" />

        <TextView
            android:id="@+id/it_tvwOn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:text="@string/on"
            android:textSize="18sp"
            android:labelFor="@+id/it_edtTimeOn"
            app:layout_constraintBottom_toBottomOf="@+id/it_tvwTimer"
            app:layout_constraintStart_toEndOf="@+id/it_tvwTimer"
            app:layout_constraintTop_toTopOf="@+id/it_tvwTimer" />

        <EditText
            android:id="@+id/it_edtTimeOn"
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:autofillHints="android:hint"
            android:ems="10"
            android:imeOptions="actionDone"
            android:inputType="numberDecimal"
            android:textAlignment="center"
            android:textSize="18sp"
            android:text="@={timerItem.timeOn}"
            app:layout_constraintBottom_toBottomOf="@+id/it_tvwOn"
            app:layout_constraintStart_toEndOf="@+id/it_tvwOn"
            app:layout_constraintTop_toTopOf="@+id/it_tvwOn" />

        <TextView
            android:id="@+id/it_tvwOff"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:text="@string/off"
            android:textSize="18sp"
            android:labelFor="@+id/it_edtTimeOff"
            app:layout_constraintBottom_toBottomOf="@id/it_edtTimeOn"
            app:layout_constraintStart_toEndOf="@+id/it_edtTimeOn"
            app:layout_constraintTop_toTopOf="@+id/it_edtTimeOn" />

        <EditText
            android:id="@+id/it_edtTimeOff"
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:autofillHints="android:hint"
            android:ems="10"
            android:imeOptions="actionDone"
            android:inputType="numberDecimal"
            android:textAlignment="center"
            android:textSize="18sp"
            android:text="@={timerItem.timeOff}"
            app:layout_constraintBottom_toBottomOf="@+id/it_tvwOff"
            app:layout_constraintStart_toEndOf="@+id/it_tvwOff"
            app:layout_constraintTop_toTopOf="@+id/it_tvwOff" />

        <TextView
            android:id="@+id/it_tvwEvery"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:text="@string/it_tvwEvery"
            android:textSize="18sp"
            android:labelFor="@id/it_edtRepeat"
            app:layout_constraintBottom_toBottomOf="@+id/it_edtTimeOff"
            app:layout_constraintStart_toEndOf="@+id/it_edtTimeOff"
            app:layout_constraintTop_toTopOf="@+id/it_edtTimeOff" />

        <EditText
            android:id="@+id/it_edtRepeat"
            android:layout_width="40dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:autofillHints=""
            android:ems="10"
            android:imeOptions="actionDone"
            android:inputType="number"
            android:textAlignment="center"
            android:text="@={timerItem.repeat}"
            app:layout_constraintBottom_toBottomOf="@+id/it_tvwEvery"
            app:layout_constraintStart_toEndOf="@+id/it_tvwEvery"
            app:layout_constraintTop_toTopOf="@+id/it_tvwEvery" />

        <TextView
            android:id="@+id/it_tvwDay"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="6dp"
            android:text="@string/it_tvwDay"
            android:textSize="18sp"
            app:layout_constraintBottom_toBottomOf="@+id/it_edtRepeat"
            app:layout_constraintStart_toEndOf="@+id/it_edtRepeat"
            app:layout_constraintTop_toTopOf="@+id/it_edtRepeat" />

        <TextView
            android:id="@+id/it_tvwFor"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:text="@string/it_tvwFor"
            android:textSize="18sp"
            android:labelFor="@+id/it_edtPeriod"
            app:layout_constraintBottom_toBottomOf="@+id/it_tvwDay"
            app:layout_constraintStart_toEndOf="@+id/it_tvwDay"
            app:layout_constraintTop_toTopOf="@+id/it_tvwDay" />

        <EditText
            android:id="@+id/it_edtPeriod"
            android:layout_width="70dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="9dp"
            android:autofillHints=""
            android:ems="10"
            android:imeOptions="actionDone"
            android:inputType="number"
            android:textAlignment="center"
            android:text="@={timerItem.period}"
            app:layout_constraintBottom_toBottomOf="@+id/it_tvwFor"
            app:layout_constraintStart_toEndOf="@+id/it_tvwFor"
            app:layout_constraintTop_toTopOf="@+id/it_tvwFor" />

        <TextView
            android:id="@+id/it_tvwSeconds"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:text="@string/seconds"
            android:textSize="18sp"
            app:layout_constraintBottom_toBottomOf="@+id/it_edtPeriod"
            app:layout_constraintStart_toEndOf="@+id/it_edtPeriod"
            app:layout_constraintTop_toTopOf="@+id/it_edtPeriod" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>